# google-cloud-rs

.github/workflows/: ci.yaml
google-cloud/: Cargo.toml  build.rs
google-cloud-derive/: Cargo.toml
google-cloud/src/authorize/: mod.rs
google-cloud/src/datastore/: client.rs  query.rs
google-cloud/src/datastore/api/: google.api.rs  google.datastore.v1.rs  google.r#type.rs
google-cloud/src/pubsub/: client.rs  topic.rs
google-cloud/src/pubsub/api/: google.pubsub.v1.rs
google-cloud/src/vision/api/: google.api.rs  google.cloud.vision.v1.rs  google.longrunning.rs  google.r#type.rs  google.rpc.rs
